[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/scenes/main/gameplay_orthogonal/gameplay_orthogonal.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scenes/main/gameplay3d/gameplay3d.gd" type="Script" id=2]
[ext_resource path="res://game/assets/art/general/background_sample.png" type="Texture" id=3]
[ext_resource path="res://game/assets/art/general/highways/Purple Highway.png" type="Texture" id=5]
[ext_resource path="res://game/assets/art/general/highways/Red Highway.png" type="Texture" id=6]

[sub_resource type="World" id=3]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("temp_BackgroundViewport")

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("GameplayViewport")

[node name="Gameplay3D" type="Spatial"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.6, -5.4, 7.7 )
current = true

[node name="temp_BackgroundViewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
own_world = true
world = SubResource( 3 )
transparent_bg = true
handle_input_locally = false
keep_3d_linear = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="BackgroundSprite" type="Sprite" parent="temp_BackgroundViewport"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="GrowthHighwaySprite" type="Sprite" parent="temp_BackgroundViewport"]
position = Vector2( 594, 579.5 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="DecayHighwaySprite" type="Sprite" parent="temp_BackgroundViewport"]
position = Vector2( 1326, 579.5 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="temp_BackgroundViewportSprite3D" type="Sprite3D" parent="."]
transform = Transform( 4.9, 0, 0, 0, 4.9, 0, 0, 0, 1, 9.6, -5.4, -30 )
visible = false
texture = SubResource( 2 )

[node name="GameplayViewport" type="Viewport" parent="."]
size = Vector2( 1920, 1800 )
transparent_bg = true
handle_input_locally = false
keep_3d_linear = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GameplayOrthogonal" parent="GameplayViewport" instance=ExtResource( 1 )]

[node name="GameplayViewportSprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.522498, 0.85264, 0, -0.85264, 0.522498, 9.6, -3.85, -9.1 )
alpha_cut = 2
render_priority = 1
texture = SubResource( 1 )

[connection signal="level_ended" from="GameplayViewport/GameplayOrthogonal" to="." method="_on_GameplayOrthogonal_level_ended"]
[connection signal="score_incremented" from="GameplayViewport/GameplayOrthogonal" to="." method="_on_GameplayOrthogonal_score_incremented"]
